--- a/UI_web_purchase/assets/css/base.css
+++ b/UI_web_purchase/assets/css/base.css
@@ -5,6 +5,8 @@
 }
 *{
     box-sizing: inherit;
+    margin: 0;
+    padding: 0;
 }
 html{
     /* 16px = 100%, 10px = 62.5%*/
@@ -12,6 +14,7 @@ html{
     line-height: 1.6rem;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+    
 }
 .grid{
     width: 1200px;
